--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -9,5 +9,6 @@
     <h1>ABOUT APPLE</h1>
     <img src="APPLE.jpg" width="300" alt="">
 <P>APPLE is my fav Fruit</P>
+<P>APPLE IS Fruit</P>
 </body>
 </html>
